refactor: 不要なフィールドを削除した
